fix deploy folder

--- a/src/assets/scss/_form.scss
+++ b/src/assets/scss/_form.scss
@@ -9,7 +9,7 @@
   background: #fff;
   color: #39425d;
   font-size: 1rem;
-  background: url('/agency/images/email.svg') no-repeat 30px center;
+  background: url('/landing-agency/images/email.svg') no-repeat 30px center;
 }
 
 .form-text {
